优化：调通duckdb MongoDB外部表